syntax = "proto3";

package erda.msp.credential;
option go_package = "github.com/erda-project/erda-proto-go/msp/credential/pb";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";
import "common/openapi.proto";

service AccessKeyService {
  option (erda.common.openapi_service) = {
    service: "msp",
    auth: {
      check_login: true,
      check_token: true,
    }
  };
  rpc CreateAccessKey (CreateAccessKeyRequest) returns (CreateAccessKeyResponse) {
    option (google.api.http)     = {
      post: "/api/msp/credential/access-keys"
    };
    option (erda.common.openapi) = {
      path: "/api/msp/credential/access-keys"
    };
  }

  rpc DeleteAccessKey (DeleteAccessKeyRequest) returns (DeleteAccessKeyResponse) {
    option (google.api.http)     = {
      delete: "/api/msp/credential/access-keys/{id}"
    };
    option (erda.common.openapi) = {
      path: "/api/msp/credential/access-keys/{id}"
    };
  }

  rpc GetAccessKey (GetAccessKeyRequest) returns (GetAccessKeyResponse) {
    option (google.api.http)     = {
      get: "/api/msp/credential/access-keys/{id}"
    };
    option (erda.common.openapi) = {
      path: "/api/msp/credential/access-keys/{id}"
    };
  }

  rpc DownloadAccessKeyFile (DownloadAccessKeyFileRequest) returns (DownloadAccessKeyFileResponse){
    option (google.api.http)     = {
      get: "/api/msp/credential/access-keys/download",
    };
    option (erda.common.openapi) = {
      path: "/api/msp/credential/access-keys/download"
    };
  }

  rpc QueryAccessKeys (QueryAccessKeysRequest) returns (QueryAccessKeysResponse) {
    option (google.api.http)     = {
      post: "/api/msp/credential/access-keys/records"
    };
    option (erda.common.openapi) = {
      path: "/api/msp/credential/access-keys/records"
    };
  }
}

message CreateAccessKeyRequest {
  SubjectTypeEnum.SubjectType subjectType = 1;
  string                                                                              subject     = 2;
  string                                                                              description = 3;
  string                                                                              scope       = 4;
  string                                                                              scopeId     = 5;
}

message CreateAccessKeyResponse {
  CreateAccessKeyData data = 1;
}

message CreateAccessKeyData {
  string id        = 1;
  uint64 projectId = 2;
}

message DeleteAccessKeyRequest {
  string id = 1;
}

message DeleteAccessKeyResponse {
  uint64 data = 1;
}

message GetAccessKeyRequest {
  string id = 1;
}

message GetAccessKeyResponse {
  AccessKeysItem data = 1;
}

message DownloadAccessKeyFileRequest {
  string id = 1;
}

message DownloadAccessKeyFileResponse {
  bytes content = 1;
}

message QueryAccessKeysRequest {
  StatusEnum.Status           status      = 1;
  SubjectTypeEnum.SubjectType subjectType = 2;
  string                                                                              subject     = 3;
  string                                                                              accessKey   = 4;
  int64                                                                               pageNo      = 5;
  int64                                                                               pageSize    = 6;
  string                                                                              scope       = 7;
  string                                                                              scopeId     = 8;
}

message QueryAccessKeysResponse {
  QueryAccessKeysData data    = 1;
  repeated string     userIDs = 2;
}

message QueryAccessKeysData {
  repeated QueryAccessKeys list  = 1;
  int64                    total = 2;
}

message QueryAccessKeys {
  string                    id        = 1;
  string                    token     = 2;
  google.protobuf.Timestamp createdAt = 3;
  string                    creator   = 4;
}

message AccessKeysItem {
  string                      id          = 1;
  string                      accessKey   = 2;
  string                      secretKey   = 3;
  StatusEnum.Status           status      = 4;
  SubjectTypeEnum.SubjectType subjectType = 5;
  string                      subject     = 6;
  string                      description = 7;
  google.protobuf.Timestamp   createdAt   = 8;
  string                      scope       = 9;
  string                      scopeId     = 10;
  string                      token       = 11;
  string                      creatorId   = 12;
}

message SubjectTypeEnum {
  enum SubjectType {
    NOT_SPECIFIED = 0; // TODO workaround for optional
    OTHER         = 1;
    SYSTEM        = 2;
    MICRO_SERVICE = 3;
    CLUSTER       = 4;
  }
}

message StatusEnum {
  enum Status {
    NOT_SPECIFIED = 0; // TODO workaround for optional
    ACTIVATE      = 1;
    DISABLED      = 2;
    DELETED       = 3;
  }
}
